fix password text cut off

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -144,7 +144,7 @@
 .questionnaire-login input {
 	text-align: center;
 	font-family: 'Northwell';
-	line-height: 75px;
+	line-height: 80px;
 }
 .questionnaire-login .input-group ::placeholder,
 .questionnaire-login input ::placeholder {
