--- a/client/src/components/pages/QuestionnaireLogin/QuestionnaireLogin.scss
+++ b/client/src/components/pages/QuestionnaireLogin/QuestionnaireLogin.scss
@@ -12,7 +12,7 @@
 	input {
 		text-align: center;
 		font-family: 'Northwell';
-		line-height: 75px;
+		line-height: 80px;
 
 		::placeholder {
 			font-family: 'Northwell';
